--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -1,4 +1,4 @@
-name: Greeting
+name: Deploy Dist
 
 on: [push, workflow_dispatch]
 
@@ -10,8 +10,23 @@ jobs:
     greet:
         runs-on: ubuntu-latest
         steps:
-            - name: "Get Code"
-              run: |
-                echo "Cloning repo..!"
-                echo "${{toJson(github)}}"
-                git clone https://github.com/${{github.repository}}.git
+            - name: Get Code
+              uses: actions/checkout@v4
+            #  run: |
+            #    echo "Cloning repo..!"
+            #    echo "${{toJson(github)}}"
+            #    git clone https://github.com/${{github.repository}}.git
+            
+            - name: Install Node 20
+              uses: actions/setup-node@v4
+              with:
+                node-version: 20
+            
+            - name: print node version
+              run: node -v
+            
+            - name: Install Dependencies 
+              run: npm ci
+
+            - name: Run Tests
+              run: npm run test
