--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -1,6 +1,6 @@
 name: Deploy Dist
 
-on: [ workflow_dispatch]
+on: [push, workflow_dispatch]
 
 #on:
 #   - push
@@ -24,6 +24,12 @@ jobs:
             
             - name: print node version
               run: node -v
+
+            - name: Cache Dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.npm
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
             
             - name: Install Dependencies 
               run: npm ci
@@ -46,6 +52,12 @@ jobs:
         #   - name: print node version
         #     run: node -v
             
+            - name: Cache Dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.npm
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
             - name: Install Dependencies 
               run: npm ci
 
