--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -1,10 +1,15 @@
 name: Deploy Dist
 
-on: [push, workflow_dispatch]
+#on: [push, workflow_dispatch]
 
-#on:
-#   - push
-#   - workflow_dispatch
+on:
+  push:
+    branches:
+      - main
+      - 'feature/**'
+    paths-ignore:
+      - README.md
+  workflow_dispatch:
 
 jobs:
     test:
