--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -42,33 +42,53 @@ jobs:
             - name: Run Tests
               run: npm run test
 
+    build:
+      needs: test 
+      runs-on: ubuntu-latest
+      steps:
+        - name: Get Code
+          uses: actions/checkout@v4
+            #  run: |
+            #    echo "Cloning repo..!"
+            #    echo "${{toJson(github)}}"
+            #    git clone https://github.com/${{github.repository}}.git
+            
+        - name: Install Node 20
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+        
+        - name: print node version
+          run: node -v
+
+        - name: Cache Dependencies
+          uses: actions/cache@v4
+          with:
+            path: ~/.npm
+            key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
+        
+        - name: Install Dependencies 
+          run: npm ci
+
+        - name: Build Project
+          run: npm run build
+
+        - name: Upload Dist Artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: dist-files
+            path: dist
+
     deploy:
-        needs: test
-        runs-on: ubuntu-latest
-        steps:
-            - name: Get Code
-              uses: actions/checkout@v4
-         
-            - name: Install Node 20
-              uses: actions/setup-node@v4
-              with:
-                node-version: 20
-            
-        #   - name: print node version
-        #     run: node -v
-            
-            - name: Cache Dependencies
-              uses: actions/cache@v4
-              with:
-                path: ~/.npm
-                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        - name: Download Dist Artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: dist-files
+            path: dist
 
-            - name: Install Dependencies 
-              run: npm ci
-
-            - name: Build Project
-              run: npm run build
-
-            - name: Deploy
-              run: echo "Deploy Successfull"
+        - name: Deploy
+          run: echo "Deploy Successfull"
 
