--- a/.github/workflows/SonarScan.yaml
+++ b/.github/workflows/SonarScan.yaml
@@ -1,19 +1,23 @@
-name: Sonar Cloud Scan
+name: Sonar Cloud Scan  # Workflow name
+
 on:
   push:
     branches:
-      - main
+      - main  # Trigger on push to 'main' branch
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened]  # Trigger on PR open, sync, or reopen
+
 jobs:
   sonarqube:
-    name: SonarQube
-    runs-on: ubuntu-latest
+    name: SonarQube  # Job name for SonarQube analysis
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code  # Get repository code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarQube Scan
+          fetch-depth: 0  # Fetch full history for better analysis accuracy
+      
+      - name: SonarQube Scan  # Run SonarQube static code analysis
         uses: SonarSource/sonarqube-scan-action@v5
         env:        
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Secure authentication token for SonarQube
