--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://RutvikMangukiya.github.io/react-cicd-github-actions",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
