--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -30,11 +30,11 @@ jobs:
             - name: print node version
               run: node -v
 
-            - name: Cache Dependencies
-              uses: actions/cache@v4
-              with:
-                path: ~/.npm
-                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
+            # - name: Cache Dependencies
+            #   uses: actions/cache@v4
+            #   with:
+            #     path: ~/.npm
+            #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
             
             - name: Install Dependencies 
               run: npm ci
@@ -61,11 +61,11 @@ jobs:
         - name: print node version
           run: node -v
 
-        - name: Cache Dependencies
-          uses: actions/cache@v4
-          with:
-            path: ~/.npm
-            key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
+        # - name: Cache Dependencies
+        #   uses: actions/cache@v4
+        #   with:
+        #     path: ~/.npm
+        #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
         
         - name: Install Dependencies 
           run: npm ci
