--- a/.github/workflows/deployDist.yaml
+++ b/.github/workflows/deployDist.yaml
@@ -6,9 +6,9 @@ on:
   push:
     branches:
        - main
-#      - 'feature/**'
-#    paths-ignore:
-#      - README.md
+       - 'feature/**'
+    paths-ignore:
+       - README.md
   workflow_dispatch:
 
 jobs:
@@ -30,11 +30,11 @@ jobs:
             - name: print node version
               run: node -v
 
-            # - name: Cache Dependencies
-            #   uses: actions/cache@v4
-            #   with:
-            #     path: ~/.npm
-            #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
+            - name: Cache Dependencies
+              uses: actions/cache@v4
+              with:
+                path: ~/.npm
+                key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}  # linux-node-unique.val
             
             - name: Install Dependencies 
               run: npm ci
